SONAR-5966 fix the issue with comment form on small screens

--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -239,7 +239,12 @@ input.issue-action-options-search {
 
 .issue-comment-bubble-popup {
   width: 440px;
+  margin-left: -220px;
   font-size: @smallFontSize;
+
+  .bubble-popup-arrow {
+    left: 220px;
+  }
 }
 
 .issue-comment-form-text {
